--- a/mywebapp/templates/mywebapp/note_form.html
+++ b/mywebapp/templates/mywebapp/note_form.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{% if form.instance.pk %}Edit Note{% else %}Create New Note{% endif %}</title>
+    <title>Create/Edit Note</title>
+    {% load bootstrap4 %}
+    <!-- Подключите стили Bootstrap 4 -->
+    {% bootstrap_css %}
 </head>
 <body>
-    <h1>{% if form.instance.pk %}Edit Note{% else %}Create New Note{% endif %}</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">{% if form.instance.pk %}Save Changes{% else %}Create Note{% endif %}</button>
-    </form>
-    <a href="{% if form.instance.pk %}{% url 'note_detail' form.instance.pk %}{% else %}{% url 'note_list' %}{% endif %}">Cancel</a>
+    <div class="container mt-5">
+        <h1>Create/Edit Note</h1>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary">Save</button>
+        </form>
+        <a href="{% url 'note_list' %}">Back to List</a>
+    </div>
+    <!-- Подключите скрипты Bootstrap 4 -->
+    {% bootstrap_javascript %}
 </body>
 </html>
